--- a/COVID_Sustainability_Global.Rmd
+++ b/COVID_Sustainability_Global.Rmd
@@ -615,7 +615,7 @@ Selected variables:
 
 ```{r}
 # economic factors lm
-lm.econ.1 <- lm(data = df, formula = VSI ~ ExportGoodsServices.GDP_avg + 
+lm.econ.1 <- lm(data = data.train, formula = VSI ~ ExportGoodsServices.GDP_avg + 
                   FinalConsumptionExpenditure.GDP_avg + 
                   GDP.Current_avg + 
                   GDP.PerCapita.Current_avg +
@@ -623,7 +623,7 @@ lm.econ.1 <- lm(data = df, formula = VSI ~ ExportGoodsServices.GDP_avg +
 summary(lm.econ.1)
 
 # remove non-significant variables
-lm.econ.1.refined <- lm(data = df, formula = VSI ~ GDP.PerCapita.Current_avg)
+lm.econ.1.refined <- lm(data = data.train, formula = VSI ~ GDP.PerCapita.Current_avg)
 summary(lm.econ.1.refined)
 
 ```
@@ -637,29 +637,37 @@ Let's now build a model focused on COVID related factors. Note that all variable
 
 Selected variables:
 
-* `cumulative_total_cases_per_hundred_prevac` - index of disease prevalence
-* `cumulative_total_deaths_per_hundred_prevac` - index of disease severity
-* `cumulative_total_cases_per_hundred_last` - last reported total number of cases prior to vaccination start
-* `cumulative_total_deaths_per_hundred_last` - last reported total number of deaths prior to vaccination start
+* `cumulative_total_cases_per_hundred_prevac` - last reported total number of cases prior to vaccination start
+* `cumulative_total_deaths_per_hundred_prevac` - last reported total number of deaths prior to vaccination start
 * `monthly.new.cases.per.100_max` - max monthly case rate reached prior to vaccination start
 * `monthly.new.deaths.per.100_max` - max monthly death rate reached prior to vaccination start
-* `monthly_new_cases_per_hundred_last` - last reported monthly case rate reached prior to vaccination start
-* `monthly_new_deaths_per_hundred_last` - last reported monthly death rate reached prior to vaccination start
+* `monthly_new_cases_per_hundred_prevac` - last reported monthly case rate reached prior to vaccination start
+* `monthly_new_deaths_per_hundred_prevac` - last reported monthly death rate reached prior to vaccination start
 
 
 ```{r}
 # build covid model
 lm.covid.1 <- lm(VSI ~ cumulative_total_cases_per_hundred_prevac +
                    cumulative_total_deaths_per_hundred_prevac +
-                   cumulative_total_cases_per_hundred_last +
-                   cumulative_total_deaths_per_hundred_last +
                    monthly.new.cases.per.100_max +
                    monthly.new.deaths.per.100_max +
-                   monthly_new_cases_per_hundred_last +
-                   monthly_new_deaths_per_hundred_last, data = data.train)
+                   monthly_new_cases_per_hundred_prevac +
+                   monthly_new_deaths_per_hundred_prevac, data = data.train)
 summary(lm.covid.1)
 
-# remove non-significant variables
+#LOL only the intercept is significant, going to do some forward selection
+lm.covid.death <- lm(VSI ~ cumulative_total_deaths_per_hundred_prevac, data = data.train)
+summary(lm.covid.death)
+lm.covid.f2 <- update(lm.covid.f, .~. + cumulative_total_cases_per_hundred_prevac)
+summary(lm.covid.f2) #tried a few different options, adding more COVID vars don't seem to be predictive
+Anova(lm.covid.f2)
+
+# based on Anova, looks like cumulative_total_cases_per_hundred_prevac is the way to go
+lm.covid.case <- lm(VSI ~ cumulative_total_cases_per_hundred_prevac, data = data.train)
+summary(lm.covid.case)
+
+
+#joelle's models:
 lm.covid.1.refined <- lm(VSI ~ cumulative_total_deaths_per_hundred_prevac +
                            cumulative_total_cases_per_hundred_last +
                            monthly_new_deaths_per_hundred_last, data = data.train)
@@ -669,6 +677,7 @@ lm.covid.1.refined.2 <- lm(VSI ~ cumulative_total_cases_per_hundred_last , data 
 summary(lm.covid.1.refined.2)
 ```
 
+**corrected inputs, only intercept is significant now**
 Cumulative deaths per hundred prior to vaccination start, total number of cases and new deaths last reported prior to vaccination start appear to significantly impact `VSI`. After refining the model, the number of cases last reported prior to vaccination start appears to be the most important factor influencing `VSI`. Therefore, vaccination success seems influenced by a country's number of cases shortly before starting its vaccination campaign, where a higher number of cases leads to a better vaccination score. This could be explained by the fact that people may have a stronger vaccination incentive when COVID cases are more frequent around them.  
 
 #### Political and country development factors
@@ -723,7 +732,7 @@ We will now use all relevant variables found in the economic, COVID burden and p
 
 Selected variables:
 
-* `cumulative_total_cases_per_hundred_prevac` - index of disease prevalence
+* `cumulative_total_cases_per_hundred_prevac` - last reported total number of cases prior to vaccination start
 * `GDP.PerCapita.Current_2018` - latest GDP per capita
 * `LifeExpenctancy_rel.diff` - change in health metric over time (tracks increase or decrease in pop health)
 
@@ -731,7 +740,7 @@ Selected variables:
 ```{r}
 # build full model 
 lm.full <- lm(VSI ~ GDP.PerCapita.Current_avg +
-             cumulative_total_cases_per_hundred_last +
+             cumulative_total_cases_per_hundred_prevac +
              LifeExpenctancy_2018,
              data = data.train)
 Anova(lm.full)
@@ -747,6 +756,8 @@ plot(lm.full.refined, 1:2)
 ```
 When using all relevant variables found in prior models, it turns out that life expectancy (reported in 2018) is the only variable having a significant effect on `VSI`. Diagnostic plots show that the model sufficiently fulfills linear model assumptions of normality and homoscedasticity. The relationship between life expectancy and VSI is plotted here: 
 
+**Question - do we want to be doing this on the full df because it has country but also includes the test and val subsets? Follow-up, do we want to run the final model separately on the test subset? Was it a bad idea and/or unnecessary to subset the data in the first place?**
+
 ```{r}
 # get life expectancy p value
 lm.full.refined.summ <- summary(lm.full.refined)
@@ -755,14 +766,14 @@ pval <- lm.full.refined.summ$coefficients[["LifeExpenctancy_2018", "Pr(>|t|)"]]
 # get life expectancy correlation with VSI
 cor_value <- cor(data.train$LifeExpenctancy_2018, data.train$VSI, use = "complete.obs")
 
-plot_VSI_lifexp <- df %>% # using full df here to include country information
+plot_VSI_lifexp <- final.df %>% # using full df here to include country information 
   ggplot(aes(x = LifeExpenctancy_2018, y = VSI)) +
   geom_point(aes(group = country, color = country), show.legend = FALSE) +
   geom_smooth(method = "lm", color = "grey") +
   theme_bw() +
-  ggtitle("Association between life expectancy and VSI") +
+  ggtitle("Association between 2018 life expectancy and VSI") +
   xlab("Life expectancy (2018)") +
-  annotate("text", x = 56, y = max(df["VSI"]) - 0.5, # position
+  annotate("text", x = 56, y = max(final.df["VSI"]) - 0.5, # position
            size = 4, # font size
            label = paste0("Correlation: ", sprintf("%.3f", cor_value), "\n", # correlation label
                           "p-value = ", sprintf("%.3f", pval))) # pvalue label
@@ -804,7 +815,7 @@ data.train_2018 %>%
 # find names of highly correlated variables
 correlations <- data.train_2018 %>% 
   select(-VSI) %>%
-  select(-contains(c("deaths", "cases"))) %>%
+  select(-contains(c("deaths", "cases"))) %>% #remove covid vars
   select_if(., is.numeric) %>%
   cor(., use = "complete.obs")
 correlations[correlations < 0.8 | correlations == 1] <- ""
@@ -812,7 +823,7 @@ correlations
 
 # some variables are perfectly or almost perfectly correlated. We will trim variables that have correlations over 0.8 to avoid multi-collinearity. 
 data.train_2018.sub <- data.train_2018 %>%
-  select(-c(date_last, WorldRegion, # not involved in variable selection for the 2018 dataset
+  select(-c(WorldRegion, # not involved in variable selection for the 2018 dataset
             Electricity.Access_2018, # LifeExpenctancy_2018 corr 0.83
             ImportGoodsServices.GDP_2018, # ExportGoodsServices.GDP_2018 corr 0.92
             Trade.GDP_2018, # ExportGoodsServices.GDP_2018 0.98
@@ -1149,6 +1160,58 @@ summary(lm.diff.full) # this still outputs NAs due to a large amount of NAs in t
 When considering single predictors, internet usage has a significant effect on VSI. When considering all variables, the full model will output NAs as measures computed as the 17 year difference relative to baseline appear to have many NAs. Therefore, 17 year difference measures do not seem suitable to use for further modeling. 
 
 
+### MG removing correlated variables
+using method from https://statisticsglobe.com/remove-highly-correlated-variables-from-data-frame-r to automatically remove highly correlated variables w/in WSD and COVID predictors
+
+First w/in WSD
+
+```{r}
+#correlations
+wsd.corr <- data.train %>% 
+  select(-VSI) %>% # rm y
+  select(-contains(c("deaths", "cases"))) %>% #remove covid vars
+  select_if(., is.numeric) %>%
+  cor(., use="pairwise.complete.obs")
+#removing upper triangle
+wsd.corr[upper.tri(wsd.corr)] <- 0
+diag(wsd.corr) <- 0
+
+#remove vars at abs(0.95) threshold - keeping high to preserve as many variables as possible (also b/c we expect things to be correlated IRL)
+data.train.wsd.nocor <- data.train[ , !apply(wsd.corr,    # Remove highly correlated variables
+                           2,
+                           function(x) any(abs(x) > 0.95))]
+head(data.train.wsd.nocor)
+```
+Now w/in COVID
+
+```{r}
+#correlations
+covid.corr <- data.train %>% 
+  select(-VSI) %>% # rm y
+  select(contains(c("deaths", "cases"))) %>% #only covid vars
+  select_if(., is.numeric) %>%
+  cor(., use="pairwise.complete.obs")
+#removing upper triangle
+covid.corr[upper.tri(covid.corr)] <- 0
+diag(covid.corr) <- 0
+
+#remove vars at abs(0.95) threshold - keeping high to preserve as many variables as possible (also b/c we expect things to be correlated IRL)
+data.train.covid.nocor <- data.train[ , !apply(covid.corr,    # Remove highly correlated variables
+                           2,
+                           function(x) any(abs(x) > 0.95) | )]
+head(data.train.covid.nocor)
+```
+
+Apply both for full predictor df
+
+```{r}
+covid.list <- apply(covid.corr, 2, function(x) any(abs(x) > 0.95))
+wsd.list <-  apply(wsd.corr, 2, function(x) any(abs(x) > 0.95))
+cor.list <- c(covid.list, wsd.list)
+data.train.nocor <- data.train[ , !cor.list]
+head(data.train.nocor)
+```
+
 ### Selecting the "best" COVID dataset
 
 Finally, let's look at summary `COVID` cases and deaths measures to determine which ones are most informative. 
@@ -1260,64 +1323,6 @@ summary(lm.prevac.full)
 ```
 
 None of the max variables have a significant effect. 
-
-
-#### COVID last
-
-Finally, we consider covid `last` summary measures, which contain the peak of reported cases and deaths measures before each country's vaccination start. 
-
-```{r fig.width=10, fig.height=10}
-
-# create correlation plot to see whether some variables are highly correlated (not tolerated by lm)
-data.train %>% 
-  select(-VSI) %>% # remove outcome variable as we want to highlight corrs among predictors only
-  select(contains(c("last"))) %>%
-  select_if(., is.numeric) %>%
-  cor(., use = "complete.obs") %>%
-  corrplot(method = "color", 
-           type = "upper", order = "hclust", 
-           addCoef.col = "black", # Add coefficient of correlation
-           tl.col="black", tl.srt = 45, #Text label color and rotation
-           # hide correlation coefficient on the principal diagonal
-           diag = FALSE 
-           )
-
-# find names of highly correlated variables
-correlations <- data.train %>% 
-  select(-VSI) %>%
-  select(contains(c("last"))) %>%
-  select_if(., is.numeric) %>%
-  cor(., use = "complete.obs")
-correlations[correlations < 0.8 | correlations == 1] <- ""
-correlations
-
-# some variables are perfectly or almost perfectly correlated. We will trim variables that have correlations over 0.8 to avoid multi-collinearity. 
-data.train_last.sub <- data.train %>%
-  # select(contains(c("deaths", "cases"))) # focusing on WSD measures only
-  select(VSI, contains(c("last"))) %>%
-  select(-c(daily_new_cases_last,
-            active_cases_last,
-            daily_new_cases_per_hundred_last,
-            weekly_new_cases_last,
-            weekly_new_cases_per_hundred_last,
-            monthly_new_cases_last,
-            daily_new_deaths_last,
-            daily_new_deaths_per_hundred_last,
-            monthly_new_deaths_last,
-            weekly_new_deaths_last,
-            weekly_new_deaths_per_hundred_last
-            ))
-
-
-# fit full model 
-lm.prevac.full <- lm(VSI ~ ., data = data.train_prevac.sub) 
-summary(lm.prevac.full) 
-
-```
-
-
-None of the last reported variables have a significant effect. 
-
 
 ## LASSO model selection
 
